--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -34,7 +34,7 @@ $$
 
 ## Random sampling process
 
-Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the university. Indeed, imagine that we obtained a sample of $n$ = 25 students and calculated a sample mean ($\bar{x}$). Then we repeated this sampling process an infinite number of times such that we have a infinite number of sample means. This set of an **infinite number of sample means** is conceptually illustrated in Figure 1B and we refer to it as the *sampling distribution of the mean*. Moreover, **because we sampled from a single population** the variability in sample means is due only to the **random sampling error** that occurs when the sample size is 25 and the population variance is YY.
+Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the university. Indeed, imagine that we obtained a sample of $n$ = 25 students and calculated a sample mean ($\bar{x}$). Then we repeated this sampling process an infinite number of times such that we have an infinite number of sample means. This set of an **infinite number of sample means** is conceptually illustrated in Figure 1B and we refer to it as the *sampling distribution of the mean*. Moreover, **because we sampled from a single population** the variability in sample means is due only to the **random sampling error** that occurs when the sample size is 25 ($n = 25$) and the population variance is 156.3236 (i.e., $\sigma_{people}^2 =156.3236$).
 
 [Figure 1A and 1B goes here]
 
@@ -44,7 +44,7 @@ Typically, in psychology, when we use the word "population" we are referring to 
 
 ### Distribution of sample means as a population
 
-Since we are thinking of the distribution of sample means as a population we can calculate a mean and variance for the distribution of sample means. The mean of the population of sample means is calculated as below. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution)[^deep_sampling-1]
+Since we are thinking of the distribution of sample means as a population we can calculate a mean and variance for the distribution of sample means. The mean of the population of sample means is calculated as below. Notice that we used the symbol, $\mu_{\bar{x}}$, to represented this value. Further notice, the little $\bar{x}$ beside the $\mu$ in $\mu_{\bar{x}}$ which indicates it is sample means that are being averaged. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution)[^deep_sampling-1]
 
 [^deep_sampling-1]: I know it doesn't make sense the divide by infinity; however, in formal mathematics we would write this up in a different way describing the resulted value as an *expected value*. I use dividing by infinity simply as a way to show consistency with other formulas with the aim of increasing conceptual clarity at the expense of correct notation.
 
@@ -55,7 +55,7 @@ $$
 \end{aligned} 
 $$
 
-The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that of the individuals heights, $\mu_{people}$. Consequently, any conclusions we make about population means based on Figure 1B will also apply to Figure 1A. This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people - all our work in this chapter (and in ANOVA) is based on the distribution of sample mean in Figure 1B. We just need to remember that any conclusion we make about the population mean in Figure 1B will also apply to Figure 1A -- because with sample means the two distributions will always have the same mean.
+The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that of the individuals heights, $\mu_{people}$. Consequently, any conclusions we make about *population means* based on Figure 1B (i.e., $\mu_{\bar{x}}$) will also apply to Figure 1A (i.e., $\mu_{people}$). This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people (i.e., $\mu_{people}$) - all our work in this chapter (and in ANOVA) is based on the mean of distribution of sample mean in Figure 1B (i.e., $\mu_{\bar{x}}$). 
 
 ## Variance of the distribution of sampling means
 
@@ -74,7 +74,7 @@ $$
 \end{aligned} 
 $$
 
-Notice how this is similar to population formula when we are dealing with people. This formula differs for the typical formula because we are using on sample means ($\bar{x}$) instead of attributes of people ($X$). As well, we just use $A$ to indicate the number of elements used in the calculation rather than $N$.
+Notice how this is similar to population formula when we are dealing with people. This formula differs for the typical formula because we are using on sample means ($\bar{x}$) instead of attributes of people ($X$). As well, we just use $A$ to indicate the number of elements used (i.e., an infinite number of sample means) in the calculation rather than $N$.
 
 When there is only one population this formula will reflect variability in sample means due to random sampling. When there is more than one population - it becomes more complicated. We'll discuss that situation in a future chapter.
 
@@ -90,7 +90,7 @@ $$
 
 The reason this formula works should not be obvious - at all. If you are looking at this formula trying to figure out why it works - I suggest you stop and just accept that it does work. If you want to understand why it works, I suggest you [consult](https://archive.org/details/statisticsfifthe00will) [@hays1994statistics] who provides a statistical proof for the Central Limit Theorem.
 
-It's helpful, moving forward to, think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the variability due to random sampling. No matter the situation - this formula will always reflects the variability in sample means due ONLY to random sampling.
+It's helpful, moving forward to, think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the *variability in means due to random sampling*. No matter the situation - this formula will always reflects the variability in sample means due ONLY to random sampling.
 
 ### Ratio comparison of two methods
 
@@ -100,7 +100,7 @@ Thus, far we have calculated the variance of the distribution of sample means us
 
 * Method 2: Variance of sample means calculated using CLT shortcut formula
 
-Although we can just look the numbers resulting from these two methods and compare them, that's not how statisticians typically handle comparisons. The approach used by statisticians to compare two numbers is to create a ratio. That is one number is divided by the other number. If the two numbers are the same the ratio will be 1.00.
+Although we can just look the numbers resulting from these two methods and compare them, that's not how statisticians typically handle comparisons. The approach used by statisticians to compare two numbers is to create a ratio. That is, take one number and divide it by the other number. If the two numbers are the same the ratio will be 1.00.
 
 You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result.
 
@@ -126,9 +126,9 @@ In the next section, below, we recognize that we can likely never know or calcul
 | 3             |           x                   |       xx                                          |
 
 
-### Estimation using sample means
+### Method 1: Estimation using sample means
 
-If we obtain a set of sample means from this population of sample means (i.e., distribution of sample mean) we can use those to estimate the variance of the distribution of sample mean. We use the lower case "a" to represent the number of sample means. Recall, that when we use a subset of the elements of the population (i.e., population of sample means) to estimate the variance of the full population we need to use a "-1" in the denominator - see previous chapter.
+If we obtain a set of sample means from this population of sample means (i.e., distribution of sample mean) we can use those to estimate the variance of the distribution of sample mean as illustrated in the formula below. We use the lower case "a" to represent the number of sample means (in the case because we have 3 sample means $a = 3$). 
 
 $$
 \begin{aligned} 
@@ -136,7 +136,10 @@ s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 \end{aligned} 
 $$
 
-Imagine that we have 3 sample means (each based on n = 25) that we use to estimate the variance of the population of sample means (i.e., estimate the variance of the distribution of sample means).
+In this example (see table above), we have 3 sample means (each based on n = 25) so $a = 3$. Let's estimate the variance of the distribution of sample means (Figure 1B) using these three sample means.
+
+First, we calculate the mean of the three sample means ($\bar{\bar{x}}$) because we will need that in the variance formula.
+
 $$
 \begin{aligned} 
 \bar{\bar{x}} &= \frac{\sum_{i=1}^{a=3}{\bar{x}_i}}{a}\\
@@ -146,20 +149,33 @@ $$
 $$
 
 
+Second, we estimate the variance of the population of sample means ($s_{\bar{x}}^2$, see Figure 1B) using the set of sample means. Notice the use of "-1" in the denominator - [as we discussed previously in the sample accuracy chapter](https://dstanley4.github.io/psyc6060bookdown/sampling-accuracy.html#estimating-sigma2). The use of the "-1" in the denominator means we are not calculating the variance of these three sample means. Rather, we use -1 in the denominator we are estimating the variance of the population of sample means from which they were obtained (i.e., the distribution of sample means depicted in Figure 1B).
+
 $$
 \begin{aligned} 
 s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 &= \frac{(\bar{x_1}- \bar{\bar{x}})^2+(\bar{x_2}- \bar{\bar{x}})^2+(\bar{x_3}- \bar{\bar{x}})^2}{a-1}\\
 &= \frac{(\bar{x_1}- \bar{\bar{x}})^2+(\bar{x_2}- \bar{\bar{x}})^2+(\bar{x_3}- \bar{\bar{x}})^2}{3-1}\\
 \end{aligned} 
+$$'
+
+Thus, using Method 1, our estimate of the variance of the distribution of sample means is XXX.
+
+
+### Method 2: Estimation using CLT shortcut
+
+Recall, than an alternative to calculating the variance of the distribution of sample means is to use the shortcut formula based on the Central Limit Theorem (CLT). 
+
+$$
+\begin{aligned} 
+\sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{n}\\
+\end{aligned} 
 $$
 
 
-### Estimation using CLT shortcut
+#### Estimating $\sigma_{people}^2$ with $s_{people}^2$
 
-Recall, than an alternative to calculating the variance of the distribution of sample means is to use the shortcut formula based on central limit theorem. That formula is presented below.
-
-The problem with this formula is that you need to know the variance of the all the people in the population - and we don't know the variance of all the people in the population. But, we do have three samples from that population of people. Because the three samples are from the same population of people - we know each sample provides an estimate of the same (single) variance of people in the population. Therefore, we can combine those variance estimates into better (or average) estimate of the variance of the people in the population using the formula below.
+The problem with the formula above is that you need to know the variance of the all the people in the population ($\sigma_{people}^2$) - and we don't know the variance of all the people in the population. But, we do have three samples from that population of people. Because the three samples are from the same population of people - we know each sample provides an estimate of the same (single) variance of people in the population. Therefore, we can combine those variance estimates into better (or average) estimate of the variance of the people ($s_{people}^2$) in the population using the formula below.
 
 $$
 \begin{aligned}
