--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -8,7 +8,7 @@ output:
 
 ## A tale of two methods
 
-In this chapter, we focus on describing the sampling distribution of the mean. Our goal is to understand the logic behind two different methods for estimating the variance of the sampling distribution of the mean. A thorough understanding of these two estimation methods lays the foundation for understanding Analysis of Variance (ANOVA). 
+In this chapter, we focus on describing the sampling distribution of the mean. Our goal is to understand the logic behind two different methods for estimating the variance of the sampling distribution of the mean. A thorough understanding of both of these two estimation methods lays the foundation for understanding Analysis of Variance (ANOVA).
 
 ## A student population
 
@@ -23,7 +23,7 @@ $$
 \end{aligned} 
 $$
 
-The variance of the population people's heights (in cm) is calculated as below (where N = 50,000).
+The variance of the population people's heights (in cm$^2$) is calculated as below (where N = 50,000).
 
 $$
 \begin{aligned} 
@@ -40,11 +40,17 @@ Now imagine that we are interested in studying the random sampling process. Spec
 
 ## Population: What's in a name
 
-Typically, in psychology, when we use the word "population" we are referring to a population of people - such as those illustrated in Figure 1A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure 1A as a population to also thinking of the distribution of sample mean in Figure 1B as a population. Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA).
+Typically, in psychology, when we use the word "population" we are referring to a population of people - such as those illustrated in Figure 1A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure 1A as a population to **also** thinking of the distribution of sample mean in Figure 1B as a population. Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA).
+
+### Sample means in context.
+
+Thinking of the distribution of sample mean as a population can be a bit tricky - since there are two populations that we could be referring to when we use the word "population". Notation helps to keep things straight. In this book, when we are talking about a distribution of people (see Figure 1A), we use $N$ to indicate the number people in the population and $n$ to refer to the number of people in a subset of the population (what we typically refer to as a sample). Likewise, when we are talking about a distribution of sample means (see Figure 1B), we use $A$ to indicate the number sample means in the population and $a$ to refer to the number of sample means in a subset of the population.
+
+Consider a concrete example. When we obtain a sample of people ($n$ = 25) we can think those people as being subset of the population of people ($N$=50,000), see Figure 1A. If we calculate a sample mean ($\bar{x}$) based on those 25 people we can think of that single sample mean ($a$ = 1) a being subset of a population of sample means ($A = \infty$), see Figure 1B. Alternatively, imagine we obtained three samples from the population of people, Figure 1A, each composed of 25 people ($n$ = 25 for each sample). Then we calculated the sample mean ($\bar{x}$) for each of the three samples. We could think of those three sample means ($a$ = 3) as being a subset of a population of sample means ($A = \infty$), see Figure 1B.
 
 ### Distribution of sample means as a population
 
-Since we are thinking of the distribution of sample means as a population we can calculate a mean and variance for the distribution of sample means. The mean of the population of sample means is calculated as below. Notice that we used the symbol, $\mu_{\bar{x}}$, to represented this value. Further notice, the little $\bar{x}$ beside the $\mu$ in $\mu_{\bar{x}}$ which indicates it is sample means that are being averaged. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution)[^deep_sampling-1]
+Because we are thinking of the distribution of sample means as a population we can calculate a mean and variance for the distribution of sample means. The mean of the population of sample means is calculated as below. Notice that we used the symbol, $\mu_{\bar{x}}$, to represented this value. Further notice, the little $\bar{x}$ beside the $\mu$ in $\mu_{\bar{x}}$ which indicates it is sample means that are being averaged. As noted previously, we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution)[^deep_sampling-1]
 
 [^deep_sampling-1]: I know it doesn't make sense the divide by infinity; however, in formal mathematics we would write this up in a different way describing the resulted value as an *expected value*. I use dividing by infinity simply as a way to show consistency with other formulas with the aim of increasing conceptual clarity at the expense of correct notation.
 
@@ -55,15 +61,15 @@ $$
 \end{aligned} 
 $$
 
-The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that of the individuals heights, $\mu_{people}$. Consequently, any conclusions we make about *population means* based on Figure 1B (i.e., $\mu_{\bar{x}}$) will also apply to Figure 1A (i.e., $\mu_{people}$). This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people (i.e., $\mu_{people}$) - all our work in this chapter (and in ANOVA) is based on the mean of distribution of sample mean in Figure 1B (i.e., $\mu_{\bar{x}}$). 
+The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that of the people's heights, $\mu_{people}$. Consequently, any conclusions we make about *population means* based on Figure 1B (i.e., $\mu_{\bar{x}}$) will also apply to Figure 1A (i.e., $\mu_{people}$). This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people (i.e., $\mu_{people}$) - all our work in this chapter (and in ANOVA) is based on the mean of distribution of sample mean in Figure 1B (i.e., $\mu_{\bar{x}}$).
 
 ## Variance of the distribution of sampling means
 
-When there is only *one* **population of people** there are two methods for calculating the variance of the resulting **population of sample means** that will produce the same result.
+When there is *one* **population of people** there is a single distribution of sample means that corresponds to that population. There are two methods for calculating the variance of this distribution of sample means.
 
 ### Method 1: Calculate the variance of infinite sample means
 
-In this first method, we use an infinite number of sample means and simply calculate the variance. Obviously, this is an impractical solution because we could never obtain an infite number of samples and then calculate the variance for each sample. Conceptually, however, it's good to keep this calculation method in mind - since it reminds us of principles we've already learned about the variance of populations [^deep_sampling-2]
+In this first method, we use an infinite number of sample means and simply calculate the variance. Obviously, this is an impractical solution because we could never obtain an infinite number of samples and then calculate the variance for each sample. Conceptually, however, it's good to keep this calculation method in mind - since it reminds us of principles we've already learned about the variance of populations [^deep_sampling-2]
 
 [^deep_sampling-2]: As noted previously, the notation is incorrect and I should really have expressed this as an expected value to be correct. But for conceptual clarity I divide by infinity to make the linkages to other equations clear.
 
@@ -76,7 +82,7 @@ $$
 
 Notice how this is similar to population formula when we are dealing with people. This formula differs for the typical formula because we are using on sample means ($\bar{x}$) instead of attributes of people ($X$). As well, we just use $A$ to indicate the number of elements used (i.e., an infinite number of sample means) in the calculation rather than $N$.
 
-When there is only one population this formula will reflect variability in sample means due to random sampling. When there is more than one population - it becomes more complicated. We'll discuss that situation in a future chapter.
+**When there is only one population** this formula will reflect variability in sample means due to random sampling. When there is more than one population - it becomes more complicated. We'll discuss that situation in a future chapter.
 
 ### Method 2: CLT Shortcut with variance and sample size
 
@@ -96,11 +102,11 @@ It's helpful, moving forward to, think of this formula ($\frac{\sigma_{people}^2
 
 Thus, far we have calculated the variance of the distribution of sample means using two different methods.
 
-* Method 1: Variance of sample means calculated using sample means
+-   Method 1: Variance of sample means calculated using sample means
 
-* Method 2: Variance of sample means calculated using CLT shortcut formula
+-   Method 2: Variance of sample means calculated using CLT shortcut formula
 
-Although we can just look the numbers resulting from these two methods and compare them, that's not how statisticians typically handle comparisons. The approach used by statisticians to compare two numbers is to create a ratio. That is, take one number and divide it by the other number. If the two numbers are the same the ratio will be 1.00.
+Although we can just look at the numbers resulting from these two methods and compare them, that's not how statisticians typically handle such comparisons. The approach used by statisticians to compare two numbers is to create a ratio. That is, take one number and divide it by the other number. If the two numbers are the same the ratio will be 1.00. If the ratio is larger than 1.00 it means the number on the top was bigger than the number on the bottom.
 
 You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result.
 
@@ -117,18 +123,23 @@ In this section, we focused on actually **calculating** the variance of the dist
 
 In the next section, below, we recognize that we can likely never know or calculate the variance of the distribution of sample means. Instead, we focus on **estimating** the variance of the distribution of sample means. An estimated value is an approximation of the actual value that will differ due to the effects of random sampling.
 
-## Estimating sample mean distribution variance 
+## Estimating sample mean distribution variance
 
+In this section we focus on estimating the variance of the distribution of sample means using sample data. Imagine that we obtained three samples (each $n$ = 25) from the population of people illustrated in Figure 1A. The statistics for those three sample are presented below.
+
++---------------+-------------------------------+---------------------------------------------------+
 | Sample Number | Mean ($\frac{\Sigma x_i}{n}$) | Variance ($\frac{\Sigma (x_i - \bar{x})^2}{n-1}$) |
-|---------------|------------|--------------|
-| 1             |           x                   |       xx                                          |
-| 2             |           x                   |       xx                                          |
-| 3             |           x                   |       xx                                          |
-
++===============+===============================+===================================================+
+| 1             | x                             | xx                                                |
++---------------+-------------------------------+---------------------------------------------------+
+| 2             | x                             | xx                                                |
++---------------+-------------------------------+---------------------------------------------------+
+| 3             | x                             | xx                                                |
++---------------+-------------------------------+---------------------------------------------------+
 
 ### Method 1: Estimation using sample means
 
-If we obtain a set of sample means from this population of sample means (i.e., distribution of sample mean) we can use those to estimate the variance of the distribution of sample mean as illustrated in the formula below. We use the lower case "a" to represent the number of sample means (in the case because we have 3 sample means $a = 3$). 
+We can use the sample means presented in the table above to estimate the variance of the distribution of sample mean as illustrated in the formula below. Recall, we use the lower case "$a$" to represent the number of sample means (in the case because we have 3 sample means $a = 3$).
 
 $$
 \begin{aligned} 
@@ -148,8 +159,7 @@ $$
 \end{aligned} 
 $$
 
-
-Second, we estimate the variance of the population of sample means ($s_{\bar{x}}^2$, see Figure 1B) using the set of sample means. Notice the use of "-1" in the denominator - [as we discussed previously in the sample accuracy chapter](https://dstanley4.github.io/psyc6060bookdown/sampling-accuracy.html#estimating-sigma2). The use of the "-1" in the denominator means we are not calculating the variance of these three sample means. Rather, we use -1 in the denominator we are estimating the variance of the population of sample means from which they were obtained (i.e., the distribution of sample means depicted in Figure 1B).
+Second, we estimate the variance of the population of sample means ($s_{\bar{x}}^2$, see Figure 1B) using the set of sample means. Notice the use of "-1" in the denominator - [which we discussed previously in the sample accuracy chapter](https://dstanley4.github.io/psyc6060bookdown/sampling-accuracy.html#estimating-sigma2). The use of the "-1" in the denominator means we are not calculating the variance of these three sample means. Rather, when we use "-1" in the denominator we are **estimating** the variance of the population of sample means from which they were obtained (i.e., the distribution of sample means depicted in Figure 1B).
 
 $$
 \begin{aligned} 
@@ -157,14 +167,13 @@ s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 &= \frac{(\bar{x_1}- \bar{\bar{x}})^2+(\bar{x_2}- \bar{\bar{x}})^2+(\bar{x_3}- \bar{\bar{x}})^2}{a-1}\\
 &= \frac{(\bar{x_1}- \bar{\bar{x}})^2+(\bar{x_2}- \bar{\bar{x}})^2+(\bar{x_3}- \bar{\bar{x}})^2}{3-1}\\
 \end{aligned} 
-$$'
+$$
 
-Thus, using Method 1, our estimate of the variance of the distribution of sample means is XXX.
-
+Thus, using Method 1: Sample Means, our estimate of the variance of the distribution of sample means is XXX.
 
 ### Method 2: Estimation using CLT shortcut
 
-Recall, than an alternative to calculating the variance of the distribution of sample means is to use the shortcut formula based on the Central Limit Theorem (CLT). 
+We can use the information presented in the table above in another way to estimate the variance of the distribution of sample means. Indeed, recall than another approach to calculating the variance of the distribution of sample means is to use the shortcut formula based on the Central Limit Theorem (CLT).
 
 $$
 \begin{aligned} 
@@ -172,10 +181,9 @@ $$
 \end{aligned} 
 $$
 
-
 #### Estimating $\sigma_{people}^2$ with $s_{people}^2$
 
-The problem with the formula above is that you need to know the variance of the all the people in the population ($\sigma_{people}^2$) - and we don't know the variance of all the people in the population. But, we do have three samples from that population of people. Because the three samples are from the same population of people - we know each sample provides an estimate of the same (single) variance of people in the population. Therefore, we can combine those variance estimates into better (or average) estimate of the variance of the people ($s_{people}^2$) in the population using the formula below.
+The problem with the formula above is that you need to know the variance of the all the people in the population ($\sigma_{people}^2$) - and we don't know the variance of all the people in the population. But, we do have three samples from that population of people. Because the three samples are from the same population of people - we know each sample provides an estimate of the same (single) variance of people in the population. Therefore, we can combine those variance estimates into a better (or average) estimate of the variance of the people ($s_{people}^2$) in the population using the formula below.
 
 $$
 \begin{aligned}
@@ -186,15 +194,27 @@ s_{people}^2 &= MSE_{people}\\
 \end{aligned}
 $$
 
-We use different names to refer to the resulting number - we could just call it a better estimate of the population variance. But statisticians also use the names pooled variance of mean squared error for this term. It's important to know that when the sample sizes are equal it's the average of the variances... We'll use the notation s2mse to refer to this estimate of the variance of the people.
+When the three sample sizes are the same the above formula just boils down to an average:
 
-Armed with the estimate of the variance of the people in the population we can use the CLT shortcut formula to obtain an estimate of the variance of the distribution of sample means.
+$$
+\begin{aligned}
+s_{people}^2 &= MSE_{people}\\
+&= \frac{s_1^2 + s_2^2 + s_3^2}{3} \\
+\end{aligned}
+$$
+
+We use different names to refer to the resulting variance number - we could just call it a better estimate of the population variance ($s_{people}^2$). But statisticians also use the term pooled variance ($s_{pooled}^2$) to refer it. Other times statistician use the term Mean Square Error ($MSE$) to refer to it. You should realize that these are all just synonyms for variance: $s_{people}^2 = s_{pooled}^2 = MSE_{people} = MSE$.
+
+
+Armed with the estimate of the variance of the people in the population ($s_{people}^2$) we can use the CLT shortcut formula to obtain an estimate of the variance of the distribution of sample means.
 
 $$
 \begin{aligned} 
 s_{\bar{x}}^2 &= \frac{s_{people}^2}{n}\\
 \end{aligned} 
 $$
+
+Thus, using Method 2: CLT shortcut, our estimate of the variance of the distribution of sample means is XXX. 
 
 ### Ratio comparison of two methods
 
