--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -86,7 +86,9 @@ Notice how this is similar to population formula when we are dealing with people
 
 ### Method 2: CLT Shortcut with variance and sample size
 
-Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means. There is a "shortcut formula" we can used based on the Central Limit Theorem (CLT). More specifically, the variance of the distribution of sample means depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population ($\sigma_{people}^2$). $$
+Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means. There is a "shortcut formula" we can used based on the Central Limit Theorem (CLT). More specifically, the variance of the distribution of sample means depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population ($\sigma_{people}^2$). 
+
+$$
 \begin{aligned} 
 \sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{n}\\
 &= \frac{156.3236}{25}\\
@@ -127,15 +129,12 @@ In the next section, below, we recognize that we can likely never know or calcul
 
 In this section we focus on estimating the variance of the distribution of sample means using sample data. Imagine that we obtained three samples (each $n$ = 25) from the population of people illustrated in Figure 1A. The statistics for those three sample are presented below.
 
-+---------------+-------------------------------+---------------------------------------------------+
 | Sample Number | Mean ($\frac{\Sigma x_i}{n}$) | Variance ($\frac{\Sigma (x_i - \bar{x})^2}{n-1}$) |
-+===============+===============================+===================================================+
+|:-------------:|:-----------------------------:|:-------------------------------------------------:|
 | 1             | x                             | xx                                                |
-+---------------+-------------------------------+---------------------------------------------------+
 | 2             | x                             | xx                                                |
-+---------------+-------------------------------+---------------------------------------------------+
 | 3             | x                             | xx                                                |
-+---------------+-------------------------------+---------------------------------------------------+
+
 
 ### Method 1: Estimation using sample means
 
