--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -187,7 +187,7 @@ The problem with the formula above is that you need to know the variance of the 
 $$
 \begin{aligned}
 s_{people}^2 &= MSE_{people}\\
-&= \frac{\sum_{i=1}^{a=3}(n_i-1)(s_i^2)}{\sum_{i=1}^{a}(n_i-1)} \\
+&= \frac{\sum_{i=1}^{a=3}(n_i-1)s_i^2}{\sum_{i=1}^{a}(n_i-1)} \\
 &= \frac{(n_1-1)s_1^2 + (n_2-1)s_2^2 + (n_3-1)s_3^2}{(n_1-1)+(n_2-1)+(n_3-1)} \\
 &= \frac{(25-1)s_1^2 + (25-1)s_2^2 + (25-1)s_3^2}{(25-1)+(25-1)+(25-1)} \\
 \end{aligned}
