--- a/book.bib
+++ b/book.bib
@@ -299,6 +299,7 @@
   number={1},
   pages={78--80},
   year={2003},
+  journal = {American Psychologist},
   publisher={American Psychological Association}
 }
 
@@ -420,6 +421,7 @@
   title={An excess of positive results: Comparing the standard Psychology literature with Registered Reports},
   author={Scheel, Anne M and Schijen, Mitchell and Lakens, Dani{\"e}l},
   year={2020},
+  journal={PsyArXiv},
   publisher={PsyArXiv}
 }
 
@@ -451,6 +453,7 @@
   title={Retracted science and the retraction index},
   author={Fang, Ferric C and Casadevall, Arturo},
   year={2011},
+  journal={Infection and Immunity},
   publisher={Am Soc Microbiol}
 }
 
@@ -496,6 +499,7 @@
   title={Error Tight: Exercises for Lab Groups to Prevent Research Mistakes},
   author={Strand, Julia},
   year={2021},
+  journal={PsyArXiv},
   publisher={PsyArXiv}
 }
 
@@ -541,12 +545,3 @@
   year={2005}
 }
 
-@article{wicherts2016degrees,
-  title={Degrees of freedom in planning, running, analyzing, and reporting psychological studies: A checklist to avoid p-hacking},
-  author={Wicherts, Jelte M and Veldkamp, Coosje LS and Augusteijn, Hilde EM and Bakker, Marjan and Van Aert, Robbie and Van Assen, Marcel ALM},
-  journal={Frontiers in psychology},
-  volume={7},
-  pages={1832},
-  year={2016},
-  publisher={Frontiers}
-}
