--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -10168,8 +10168,8 @@ Now imagine that we are interested in studying the random sampling process. Spec
 
 Typically, in psychology, when we use the word ``population'' we are referring to a population of people - such as those illustrated in Figure 1A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure 1A as a population to \textbf{also} thinking of the distribution of sample mean in Figure 1B as a population. Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA).
 
-\hypertarget{sample-means-in-context.}{%
-\subsection{Sample means in context.}\label{sample-means-in-context.}}
+\hypertarget{sample-means-in-context}{%
+\subsection{Sample means in context}\label{sample-means-in-context}}
 
 Thinking of the distribution of sample mean as a population can be a bit tricky - since there are two populations that we could be referring to when we use the word ``population''. Notation helps to keep things straight. In this book, when we are talking about a distribution of people (see Figure 1A), we use \(N\) to indicate the number people in the population and \(n\) to refer to the number of people in a subset of the population (what we typically refer to as a sample). Likewise, when we are talking about a distribution of sample means (see Figure 1B), we use \(A\) to indicate the number sample means in the population and \(a\) to refer to the number of sample means in a subset of the population.
 
@@ -10208,7 +10208,7 @@ In this first method, we use an infinite number of sample means and simply calcu
 
 Notice how this is similar to population formula when we are dealing with people. This formula differs for the typical formula because we are using on sample means (\(\bar{x}\)) instead of attributes of people (\(X\)). As well, we just use \(A\) to indicate the number of elements used (i.e., an infinite number of sample means) in the calculation rather than \(N\).
 
-\textbf{When there is only one population} this formula will reflect variability in sample means due to random sampling. When there is more than one population - it becomes more complicated. We'll discuss that situation in a future chapter.
+\textbf{When there is only one population of people} this formula will reflect variability in sample means due to random sampling. When there is more than one population of people - it becomes more complicated. We'll discuss that situation in a future chapter.
 
 \hypertarget{method-2-clt-shortcut-with-variance-and-sample-size}{%
 \subsection{Method 2: CLT Shortcut with variance and sample size}\label{method-2-clt-shortcut-with-variance-and-sample-size}}
