--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -242,7 +242,7 @@ s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 \end{aligned} 
 $$
 
-Thus, the variance of the distribution of sample means ($\sigma_{\bar{x}}^2$) is estimated, using Method 1, to be  $s_{\bar{x}}^2 = `r method1_var`$. Remember though `r method1_var` is just an estimate of the population value.
+Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is estimated, using Method 1, to be  $s_{\bar{x}}^2 = `r method1_var`$. Remember though `r method1_var` is just an *estimate* of the population value ($\sigma_{\bar{x}}^2$) based on three sample means.
 
 ### Method 2: Estimation using CLT shortcut
 
