--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -199,11 +199,11 @@ method1_var <- round(var(xbar_vector),3)
 
 In this section we focus on estimating the variance of the distribution of sample means using sample data. Imagine that we obtained three samples (each $n$ = 25) from the population of people illustrated in Figure 1A. The statistics for those three sample are presented below.
 
-| Sample Number | Mean ($\frac{\Sigma x_i}{n}$) | Variance ($\frac{\Sigma (x_i - \bar{x})^2}{n-1}$) |
-|:-------------:|:-----------------------------:|:------------------------------------------------:|
-| 1             | `r sample_mean`      | `r est_pop_var`                         |
-| 1             | `r sample_mean2`     | `r est_pop_var2`                        |
-| 1             | `r sample_mean3`     | `r est_pop_var3`                        |
+| Sample Number | Sample size ($n$) | Mean ($\bar{x} = \frac{\Sigma x_i}{n}$) | Variance ($s^2=\frac{\Sigma (x_i - \bar{x})^2}{n-1}$) |
+|:-------------:|:-----:|:-----------------------------:|:------------------------------------------------:|
+| 1             |  25 | `r sample_mean`      | `r est_pop_var`                         |
+| 1             |  25 | `r sample_mean2`     | `r est_pop_var2`                        |
+| 1             |  25 | `r sample_mean3`     | `r est_pop_var3`                        |
 
 
 ### Method 1: Estimation using sample means
