--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -68,7 +68,7 @@ $$
 The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that of the people's heights, $\mu_{people}$. Consequently, any conclusions we make about *population means* based on Figure 1B (i.e., $\mu_{\bar{x}}$) will also apply to Figure 1A (i.e., $\mu_{people}$). This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people (i.e., $\mu_{people}$) - all our work in this chapter (and in ANOVA) is based on the mean of distribution of sample mean in Figure 1B (i.e., $\mu_{\bar{x}}$).
 
 
-## Variance of the distribution of sampling means
+##  Sample mean distribution variance
 
 When there is *one* **population of people** there is a single distribution of sample means that corresponds to that population. There are two methods for calculating the variance of this distribution of sample means.
 
