--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -70,7 +70,7 @@ The mean of the sample means, $\mu_{\bar{x}}$, will always be the same as that o
 
 ##  Sample mean distribution variance
 
-When there is *one* **population of people** there is a single distribution of sample means that corresponds to that population. There are two methods for calculating the variance of this distribution of sample means.
+When there is *one* **population of people** there is a single distribution of sample means that corresponds to that population (see Figure 1B). There are two methods for calculating the variance of this distribution of sample means.
 
 ### Method 1: Calculate the variance of infinite sample means
 
