--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -89,7 +89,7 @@ Notice how this is similar to population formula when we are dealing with people
 
 **When there is only one population of people** this formula will reflect variability in sample means due to random sampling. When there is more than one population of people - it becomes more complicated. We'll discuss that situation in a future chapter.
 
-### Method 2: CLT Shortcut with variance and sample size
+### Method 2: CLT shortcut: *Calculation* of variance of infinite sample means
 
 Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means. There is a "shortcut formula" we can used based on the Central Limit Theorem (CLT). More specifically, the variance of the distribution of sample means depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population ($\sigma_{people}^2$). 
 
@@ -206,7 +206,7 @@ In this section we focus on estimating the variance of the distribution of sampl
 | 1             |  25 | `r sample_mean3`     | `r est_pop_var3`                        |
 
 
-### Method 1: Estimation using sample means
+### Method 1: Estimate the variance of infinite sample means using 3 sample means
 
 We can use the sample means presented in the table above to estimate the variance of the distribution of sample mean as illustrated in the formula below. Recall, we use the lower case "$a$" to represent the number of sample means (in the case because we have 3 sample means $a = 3$).
 
@@ -244,7 +244,7 @@ $$
 
 Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is estimated, using Method 1, to be  $s_{\bar{x}}^2 = `r method1_var`$. Remember though `r method1_var` is just an *estimate* of the population value ($\sigma_{\bar{x}}^2$) based on three sample means.
 
-### Method 2: Estimation using CLT shortcut
+### Method 2: CLT shortcut: *Estimation* of variance of infinite sample means
 
 We can use the information presented in the table above in another way to estimate the variance of the distribution of sample means. Indeed, recall than another approach to calculating the variance of the distribution of sample means is to use the shortcut formula based on the Central Limit Theorem (CLT).
 
