--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -286,6 +286,9 @@ $$
 We use different names to refer to the resulting variance number - we could just call it a better estimate of the population variance ($s_{people}^2$). But statisticians also use the term pooled variance ($s_{pooled}^2$) to refer it. Other times statistician use the term Mean Square Error ($MSE$) to refer to it. You should realize that these are all just synonyms for variance: $s_{people}^2 = s_{pooled}^2 = MSE_{people} = MSE$.
 
 
+
+#### Estimating $\sigma_{\bar{x}}^2$ with CLT
+
 Armed with the estimate of the variance of the people in the population ($s_{people}^2$) we can use the CLT shortcut formula to obtain an estimate of the variance of the distribution of sample means.
 
 $$
